Fixes the vertical overflow of block types.

--- a/src/scss/components/c-sf-block.scss
+++ b/src/scss/components/c-sf-block.scss
@@ -125,11 +125,10 @@
         margin: 0 $header-gutter;
         text-align: right;
         font-size: 12px;
-        line-height: 100%;
         color: $header-text-color;
         user-select: none;
         vertical-align: 2px;
-        overflow: hidden;
+        overflow-x: hidden;
         text-overflow: ellipsis;
     }
 
